<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
    <modelVersion>4.0.0</modelVersion>
    <groupId>sur.softsurena</groupId>
    <artifactId>Entidades</artifactId>
    <version>2</version>
    <packaging>jar</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <parent>
        <groupId>sur.softsurena</groupId>
        <artifactId>Proyectos</artifactId>
        <version>2</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <debug>false</debug>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>Imagenes</artifactId>
            <version>2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona.onetouch</groupId>
            <artifactId>dpotapi</artifactId>
            <version>1.5.0_14</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona.onetouch</groupId>
            <artifactId>dpotjni</artifactId>
            <version>1.5.0_14</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona.onetouch.ui.swing</groupId>
            <artifactId>dpfpverification</artifactId>
            <version>1.5.0_14</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona.onetouch.ui.swing</groupId>
            <artifactId>dpfpenrollment</artifactId>
            <version>1.5.0_14</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    
    <name>Entidades</name>
    
    <description>
        En este proyecto guardo todas las entidades de mis programas.
    </description>
</project>
